# pytorch-early-stopping

./: .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml  setup.cfg
examples/: MNIST_example.py
pytorch-early-stopping/: early_stopping.py
pytorch_early_stopping/: early_stopping.py
tests/: test_early_stopping.py
