[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-early-stopping"
version = "0.1.0"
description = "Simple early stopping callback for PyTorch"
authors = [
  { name="Rubén", github="rubzip" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "torch>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/rubzip/pytorch-early-stopping"

[tool.setuptools.packages.find]
where = ["."]
