[metadata]
name = pytorch early stopping
version = 0.1.0
author = Rubén Gijón
description = A flexible and lightweight early stopping utility for PyTorch training loops.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rubzip/pytorch-early-stopping/
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: PyTorch

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch

[options.packages.find]
where = .
